@@ -2,6 +2,10 @@
 
 = 1.6.0 =
 * WordPress 5.1 compatible.
+* Added support for the WordPress Block editor to edit documents.
+* Added an option to choose whether to use the Block editor to edit documents.
+* Added an activation hook so that viewing documents does not require to visit Settings > Permalinks first.
+* Renamed the file in charge of booting the plugin boot.php to class-documentation-controller.php to reflect the implemented class' name.
 
 = 1.5.1 =
 * Added some additional post type labels.
